yaml-manifests/monitoring-cluster/traefik/traefik-redirect-to-https-middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: elastic-mon
spec:
  redirectScheme:
    scheme: https
