yaml-manifests/monitoring-cluster/traefik/traefik-ingress-route-elasticsearch-websecure.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch-ingress-websecure
  namespace: elastic-mon
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`demo.esm.35.224.71.88.ip.es.io`)
    kind: Rule
    middlewares:
    - name: redirect-to-https
      namespace: elastic-mon
    services:
    - name: elasticsearch-mon-es-http
      port: 9200
      scheme: https
      namespace: elastic-mon
      serversTransport: traefik-servers-transport

  tls:
    secretName: elasticsearch-mon-es-http-certs-internal
    domains:
    - sans:
      - "demo.esm.35.224.71.88.ip.es.io"
